--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,32 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:padding="10dp"
+              android:orientation="vertical">
+
     <ImageView
             android:id="@+id/newsImage"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            tools:src="@drawable/ic_launcher_background"
-    />
+            android:layout_height="wrap_content"
+            tools:src="@drawable/ic_image_black_48dp"
+            android:adjustViewBounds="true"
+            />
+
 
     <TextView
             android:id="@+id/newsTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="new article"
-            android:layout_below="@id/newsImage"
-    />
+            android:layout_marginTop="10dp"
+            android:textSize="20sp"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:textStyle="bold|italic"
+            tools:text="new article"/>
 
     <TextView
             android:id="@+id/newsDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="12-6-1926"
-            android:layout_below="@id/newsTitle"
-    />
+            android:layout_marginTop="10dp"
+            android:textSize="15sp"
+            tools:text="12-6-1926"/>
 
 
-</RelativeLayout>
+</LinearLayout>
 
 
